# sermatec-inverter

./: .dockerignore  .gitignore  CONTRIBUTING  CONTRIBUTING.md  DEVELOPMENT.md  Dockerfile  README.md  docker-compose.yaml  notes.md  pyproject.toml  sermatec.py  tox.ini
docs/: CONTRIBUTING.md  DEVELOPMENT.md  PROTOCOL.md  RE_AVD.md  RE_DATA_INSPECTION.md  RE_PHYSICAL_DEVICE.md
dumps/: 0a  0b  0c_offgrid  0c_ongrid  0d  66-dump  69-dump  6a-dump  98
src/sermatec_inverter/: __init__.py  __main__.py  converters.py  exceptions.py  protocol-en.json  protocol_loader.py  protocol_parser.py  validators.py
src/sermatec_inverter/translations/: fr.csv
tests/: test_basic.py
